# raytracer

./: .gitignore  CMakeLists.txt  main.cpp
BRDF/: BRDF.h  BRDF_all.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  PerfectSpecular.cpp  PerfectSpecular.h
Light/: Ambient.cpp  Ambient.h  AmbientOccluder.cpp  AmbientOccluder.h  AreaLight.cpp  AreaLight.h  Directional.cpp  Directional.h  EnvironmentLight.cpp  EnvironmentLight.h  Light.h  PointLight.cpp  PointLight.h
Materials/: Emissive.cpp  Emissive.h  Material.cpp  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h
camera/: Camera.cpp  Camera.h  Viewplane.cpp  Viewplane.h
export/: bmp.cpp  bmp.h
geometric/: Triangle.cpp  Triangle.h
reader/: Reader.cpp  Reader.h
renderer/: Frame.cpp  Frame.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
samplers/: GaussianRandom.cpp  GaussianRandom.h  Jittered.cpp  Jittered.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h  Samplers.h  UniformRandom.cpp  UniformRandom.h
tracers/: AreaLighting.cpp  AreaLighting.h  ConstantTracer.cpp  ConstantTracer.h  RayCast.cpp  RayCast.h  Tracer.cpp  Tracer.h  Tracers.h  Whitted.cpp  Whitted.h
util/: BBox.cpp  BBox.h  CLI.cpp  CLI.h  Color.cpp  Color.h  Logger.cpp  Logger.h  Matrix3D.cpp  Matrix3D.h  Point2D.h  Ray.h  ShadeRec.h  TBBox.cpp  TBBox.h  Timer.h  Vector3D.cpp  Vector3D.h  constants.h  split.cpp  split.h
world/: SimpleWorld.cpp  SimpleWorld.h  World.h  WorldFactory.cpp  WorldFactory.h
world/KDTreeA/: Dot.cpp  Dot.h  INode.cpp  INode.h  KDTree.cpp  KDTree.h  LNode.cpp  LNode.h  Node.h
world/KDTreeB/: Dot.cpp  Dot.h  KDTree.cpp  KDTree.h  Nodes.h
